$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- allow RA support on WAN interface, and add feature to automatically
  suggest an IPv6 address for the LAN interface, based on an RA received
  from WAN/ISP
  (contributed by Andrew White)

- added IPv6 support to mini_httpd (for the webGUI)

- allow IPv6 addresses for DNS servers on System: General setup page, and
  for hosts on the DNS forwarder setup page
  (contributed by Andrew White)

- allow the remote syslog port to be changed (requested by Martin Desormeaux
  for m0n0log project)

- added kernel security patch FreeBSD-SA-08:11.arc4random

- add support for Broadcom BCM5722 NIC
  (suggested by Sebastian Lemke)

- fix display of firewall rules and static routes pages in group manager
  (reported by Peter Allgeyer)

1.3b15
------

- make PPPoE MTU on WAN configurable

- add patch to enable custom next-server and filename options for
  static mappings in DHCP server (by Stephen Erisman)

- fixed IPv6-ICMP firewall rule type matching

- added support for AICCU (a tool for dynamically configuring IPv6 tunnels
  from SixXS, allowing users with dynamic WAN IP addresses to use tunnels)
  Note that only heartbeat tunnels are supported at this time (no AYIYA).

- updated kernel to 6.3-RELEASE-p5 (ICMPv6 denial of service fix; IPv6
  NDP routing vulnerability fix)

1.3b14
------

- updated PHP to 4.4.9

- modify boot loader for embedded images to use the serial speed set by
  the BIOS (and no longer a fixed speed as soon as the kernel boots),
  as in 1.2x releases

- add VMware .vmx config file (for "official" VM release)

- import "install on Hard Drive" feature (console menu) from AskoziaPBX; this
  allows one to install an image on HD/CF by first booting with the cdrom
  version of m0n0wall

- *** consolidate net45xx, net48xx and wrap images into a single "embedded"